@@ -54,14 +54,14 @@ __thiscall void Entity_NPC::SetScale(float scale);
 
 // :uncanny:
 "558bec83e4f883ec4453568b35????????8bd957f30f115424??895c24??8b86????????894424??e8????????894424??8d4424??508d4424??c74424??00000000506a0068????????538d4424??c74424??00000000508d4424??c74424??5503000050e8????????8b8e????????6a00ff7424??e8????????8bf885ff0f84????????ff15????????8b8f????????894424??8d87????????c747??00000000c747??0000000085c974??894424??81c1240300008d4424??50e8????????8d87????????ff7424??c700000000008bcf8b03ff7424??8987????????8b43??ff7424??8987????????f30f1005????????8b07ff7424??f30f1187????????f30f1005????????f30f1187????????ff50??8b96????????578b8a????????8d41??8982????????894f??8d8a????????e8????????57e8????????84c074??5157e8????????80bf????????000f84????????8b86????????3b86????????0f84????????8b47??8d8e????????8b5f":
-static cleanup Entity_NPC* Entity_NPC::ThrowMaggot(Vector * origin<ecx>, Vector* velocity, float yOffset<xmm2>, float unk);
+static cleanup Entity_NPC* Entity_NPC::ThrowMaggot(Vector * origin<ecx>, float yOffset<xmm2>, Vector* velocity, float fallingSpeed);
 
 // two larger, actually
 "558bec83e4f883ec4453568b35????????8bd957f30f115424??895c24??8b86????????894424??e8????????894424??8d4424??508d4424??c74424??00000000506a0068????????538d4424??c74424??00000000508d4424??c74424??5503000050e8????????8b8e????????6a00ff7424??e8????????8bf885ff0f84????????ff15????????8b8f????????894424??8d87????????c747??00000000c747??0000000085c974??894424??81c1240300008d4424??50e8????????8d87????????ff7424??c700000000008bcf8b03ff7424??8987????????8b43??ff7424??8987????????f30f1005????????8b07ff7424??f30f1187????????f30f1005????????f30f1187????????ff50??8b96????????578b8a????????8d41??8982????????894f??8d8a????????e8????????57e8????????84c074??5157e8????????80bf????????000f84????????8b86????????3b86????????0f84????????8b47??8d8e????????894424":
 static cleanup Entity_NPC* Entity_NPC::ThrowMaggotAtPos(Vector * pos<ecx>, Vector* targetPos, float yOffset<xmm2>);
 
 "558bec83ec1c5356578b3d":
-static cleanup Entity_NPC* Entity_NPC::ShootMaggotProjectile(Vector* pos<ecx>, Vector* dir, float velocity<xmm2>, float yOffset);
+static cleanup Entity_NPC* Entity_NPC::ShootMaggotProjectile(Vector* pos<ecx>, float yOffset<xmm2>, Vector* dir, float fallingSpeed);
 
 "558bec83e4f856578bf2":
 static cleanup Entity_NPC* Entity_NPC::ThrowStrider(Vector* pos<ecx>,  Entity* spanwer<edx>, Vector* targetPos);
